added unit test script

--- a/User-List-MP.xcodeproj/xcshareddata/xcschemes/User-List-MP.xcscheme
+++ b/User-List-MP.xcodeproj/xcshareddata/xcschemes/User-List-MP.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "7AE586E9250B2F350066748D"
+               BuildableName = "User-List-MPTests.xctest"
+               BlueprintName = "User-List-MPTests"
+               ReferencedContainer = "container:User-List-MP.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
